Upgrade SciJava Log2 to JUnit 5